# jco

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  commitlint.config.mjs  contributing-docs.html  contributing.html  creating-new-js-components.html  eslint.config.mjs  example.html  index.html  justfile  manual-wasm-instantiation-with-wasi-overrides.html  optimized-host-bindings.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  searcher-c2a407aa.js  searchindex-419bda38.js  searchindex-c8fd4679.js  toc-b8337dd6.js  toc.html  transpiling.html  wit-type-representations.html
.github/workflows/: check-cc.yml  create-release-pr.yml  docs.yml  examples.yml  lint-gha.yml  lint.yml  main-windows.yml  main.yml  release.yml  tag-release.yml
crates/jco/: Cargo.toml
crates/js-component-bindgen/: CHANGELOG.md  Cargo.toml  cliff.toml
crates/js-component-bindgen-component/: Cargo.toml
crates/js-component-bindgen-component/src/: lib.rs
crates/js-component-bindgen/src/: core.rs  esm_bindgen.rs  function_bindgen.rs  intrinsics.rs  lib.rs  transpile_bindgen.rs  ts_bindgen.rs
crates/js-component-bindgen/src/intrinsics/: component.rs  lift.rs  lower.rs  mod.rs  resource.rs  string.rs
crates/js-component-bindgen/src/intrinsics/builtin/: async_future.rs  async_stream.rs  async_task.rs  component.rs  conversion.rs  err_ctx.rs  host.rs  js_helper.rs  lift.rs  lower.rs  mod.rs  resource.rs  string.rs  waitable.rs
crates/js-component-bindgen/src/intrinsics/external_js/: mod.rs
crates/js-component-bindgen/src/intrinsics/p3/: async_future.rs  async_stream.rs  async_task.rs  error_context.rs  host.rs  waitable.rs
crates/test-components/: Cargo.toml
crates/test-components/artifacts/: build.rs
crates/test-components/wit/: all.wit
crates/wasm-tools-component/: Cargo.toml  README.md
crates/wasm-tools-component/src/: lib.rs
crates/xtask/src/generate/: wasi_types.rs
docs/src/: SUMMARY.md  contributing.md  creating-new-js-components.md  wit-type-representations.md
examples/components/: README.md
examples/components/add/: package.json  pnpm-lock.yaml
examples/components/adder/: package.json
examples/components/browser-fetch/: package-lock.json  package.json  pnpm-lock.yaml
examples/components/builtin-bundle-ts/: .gitignore  README.md  package.json  run-transpiled.js  tsconfig.json
examples/components/builtin-bundle-ts/src/: component.ts  greeting.ts  types.ts
examples/components/builtin-bundle-ts/wit/: component.wit
examples/components/fs-write-file/: package.json
examples/components/host-logging/: package.json
examples/components/http-hello-world/: package.json
examples/components/http-hello-world/tests/: e2e.js
examples/components/http-server-fetch-handler/: package.json
examples/components/http-server-hono/: package.json
examples/components/http-server-hono-with-bindings/: package.json
examples/components/node-compat/: package.json
examples/components/node-fetch/: package.json
examples/components/node-svcworker-fetch-event/: README.md  component.js  demo.html  package.json
examples/components/node-svcworker-fetch-event/wit/: component.wit
examples/components/nodejs-platform/: README.md  package.json  run-transpiled.js
examples/components/nodejs-platform/src/: component.js
examples/components/nodejs-platform/wit/: component.wit
examples/components/string-reverse/: package.json
examples/components/string-reverse-upper/: package.json
examples/components/webidl-book-library/: package.json  pnpm-lock.yaml
examples/transpile/: README.md
examples/transpile/p3-stream-chat/: .gitignore  README.md  p3-stream-chat.wasm  package.json  tsconfig.json
examples/transpile/p3-stream-chat/demo/: all.ts  filter.ts  llm.ts
examples/transpile/p3-stream-chat/guest/: Cargo.toml
examples/transpile/p3-stream-chat/guest/src/: main.rs
examples/transpile/p3-stream-chat/wit/: chat.wit
scripts/: build-browser-bundle.mjs  check-cc.mjs  extract-latest-changelog-section.mjs
test/: cli.js  helpers.js  test.js
test/components/rust/artifacts/: build.rs
test/fixtures/components/: async_unit_stream_callee.wasm
test/fixtures/wit/: feature-gates.wit
troubleshooting/: common-issues.html
xtask/: Cargo.toml
