[workspace]
resolver = "2"
default-members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
]
members = [
  "crates/js-component-bindgen",
  "crates/js-component-bindgen-component",
  "crates/wasm-tools-component",
  "crates/xtask",
  "crates/jco",
]

[workspace.package]
edition = "2024"
version = "1.10.0"

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 'z'
overflow-checks = false
panic = 'abort'
rpath = false
strip = true

[workspace.dependencies]
anyhow = { version = "1.0.104", default-features = false }
bon = { version = "3.9.3", default-features = false }
base64 = { version = "0.22.1", default-features = false }
cargo_metadata = { version = "0.23.1", default-features = false }
heck = { version = "0.5.0", default-features = false }
log = { version = "0.4.33", default-features = false }
semver = { version = "1.0.28", default-features = false }
structopt = { version = "0.3.26", default-features = false }
tokio = { version = "1.53.1", default-features = false }
webidl2wit = { version = "0.1.1", default-features = false }
xshell = { version = "0.2.7", default-features = false }

wasmtime = { version = "47.0.2", default-features = false }
wasmtime-environ = { version = "47.0.2", features= [ "component-model", "compile" ] }

wasm-encoder = { version = "0.254.0", default-features = false }
wasm-metadata = { version = "0.254.0", default-features = false }
wasmparser = { version = "0.254.0", default-features = false }
wasmprinter = { version = "0.254.0", default-features = false }
wit-component = { version = "0.254.0", features = ["dummy-module"] }
wit-parser = { version = "0.254.0", default-features = false }

wat = { version = "1.254.0", default-features = false }

# TODO: we need a wit-bindgen release to use 1.254 stuff
wit-bindgen = { version = "0.60.0", default-features = false }
wit-bindgen-core = { version = "0.60.0", default-features = false }

wast = { version = "254.0.0", default-features = false, features = [ "component-model" ] }

js-component-bindgen = { version = "2.0.11", path = "./crates/js-component-bindgen" }
