[package]
name = "js-component-bindgen-component"
version = "0.0.0"
edition = "2021"
authors = [
  "Alex Crichton <alex@alexcrichton.com>",
  "Guy Bedford <gbedford@fastly.com>",
]

publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { workspace = true }
js-component-bindgen = { path = "../js-component-bindgen" }
wasmtime-environ = { workspace = true, features = ["component-model"] }
wit-bindgen = { workspace = true, features = ["macros"] }
wat = { workspace = true, features = ["component-model"] }
