[package]
name = "wasm-tools-js"
version = "0.1.0"
edition = "2021"

publish = false

[lib]
crate-type = ["cdylib"]
test = false
doctest = false

[dependencies]
anyhow = { workspace = true }
wasm-encoder = { workspace = true }
wasm-metadata = { workspace = true }
wasmparser = { workspace = true }
wasmprinter = { workspace = true, features = ["component-model"] }
wat = { workspace = true }
wit-bindgen = { workspace = true, features = ["macros"] }
wit-component = { workspace = true }
wit-parser = { workspace = true }
